--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,10 +1,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="135"
-        android:centerColor="@color/colorPrimary"
-        android:endColor="@color/colorPrimaryDark"
-        android:startColor="@color/colorPrimarySoft"
+        android:angle="90"
+        android:centerColor="@color/colorSecondary"
+        android:endColor="@color/colorSecondaryDark"
+        android:startColor="@color/colorSecondarySoft"
         android:type="linear" />
 </shape>
 
