--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/transparent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
@@ -19,58 +20,75 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        android:background="@drawable/side_nav_bar"
+        android:background="#00ffffff"
         app:headerLayout="@layout/nav_header_main">
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="600dp"
+            android:background="#00ffffff"
             android:id="@+id/cardViewNvList">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/side_nav_bar"
+                android:background="#00ffffff"
                 android:orientation="vertical">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingLeft="30dp"
-                    android:paddingRight="30dp"
-                    android:id="@+id/layoutDB"
-                    android:visibility="gone">
-                    <Button
-                        android:layout_width="0dp"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="20dp"
+                        android:textSize="20sp"
+                        android:text="서식지"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@drawable/button_db_backgroud"
-                        android:text="DB1"
-                        android:tag="1"
-                        android:id="@+id/btnDB1"/>
-                    <Button
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@drawable/button_db_backgroud"
-                        android:text="DB2"
-                        android:tag="2"
-                        android:id="@+id/btnDB2"/>
-                    <Button
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@drawable/button_db_backgroud"
-                        android:text="DB3"
-                        android:tag="3"
-                        android:id="@+id/btnDB3"
-                        android:visibility="gone"
-                        />
+                        android:orientation="horizontal"
+                        android:paddingLeft="30dp"
+                        android:paddingRight="30dp"
+                        android:id="@+id/layoutDB"
+                        android:visibility="gone">
+                        <Button
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:background="@drawable/button_db_backgroud"
+                            android:text="DB1"
+                            android:tag="1"
+                            android:id="@+id/btnDB1"/>
+                        <Button
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:background="@drawable/button_db_backgroud"
+                            android:text="DB2"
+                            android:tag="2"
+                            android:id="@+id/btnDB2"/>
+                        <Button
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:background="@drawable/button_db_backgroud"
+                            android:text="DB3"
+                            android:tag="3"
+                            android:id="@+id/btnDB3"
+                            android:visibility="gone"
+                            />
+                    </LinearLayout>
                 </LinearLayout>
+
+
                 <android.support.v7.widget.RecyclerView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="20dp"
+                    android:padding="20dp"
                     android:id="@+id/recyclerNvList"
+                    android:background="@drawable/background_nvlist"
                     tools:listitem="@layout/nv_item">
 
                 </android.support.v7.widget.RecyclerView>
