--- a/app/src/main/res/layout/cust_item.xml
+++ b/app/src/main/res/layout/cust_item.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#fff"
     app:cardUseCompatPadding="true"
     android:id="@+id/cardView"
     app:cardElevation="3dp"
@@ -15,13 +14,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="4dp">
-        <TextView
-            android:layout_marginTop="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="time"
-            android:id="@+id/time"
-            android:textStyle="bold"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -30,8 +22,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Name"
+                android:textStyle="bold"
                 android:id="@+id/name"
-                android:textStyle="bold"/>
+                android:textColor="#ff000000"/>
             <View
                 android:layout_width="4dp"
                 android:layout_height="match_parent"/>
@@ -44,13 +37,38 @@
                 android:textStyle="bold"
                 android:textColor="#D0583B"/>
         </LinearLayout>
-        <TextView
-            android:layout_marginTop="5dp"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Desc"
-            android:id="@+id/desc"
-            android:textStyle="bold"/>
+            android:orientation="horizontal">
+            <TextView
+                android:layout_marginTop="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="주민번호"
+                android:id="@+id/jumin"
+                android:textStyle="bold"
+                android:textColor="#ff000000"/>
+            <TextView
+                android:layout_marginTop="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="******"
+                android:textStyle="bold"
+                android:textColor="#ff000000"/>
+            <View
+                android:layout_width="4dp"
+                android:layout_height="match_parent"/>
+            <TextView
+                android:layout_marginTop="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="전화번호"
+                android:id="@+id/phone"
+                android:textStyle="bold"
+                android:textColor="#ff000000"/>
+
+        </LinearLayout>
         <TextView
             android:layout_width="0dp"
             android:layout_height="0dp"
