--- a/app/src/main/res/layout/nv_item.xml
+++ b/app/src/main/res/layout/nv_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorPrimaryDark"
+    android:layout_marginBottom="4dp"
     app:cardUseCompatPadding="true"
     android:id="@+id/cardView"
     app:cardElevation="3dp"
