--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,11 +4,11 @@
     <color name="colorPrimaryDark">#A09789</color>
     <color name="colorPrimarySoft">#EDE9DF</color>
 
-    <color name="colorSecondary">#CEC5B7</color>
-    <color name="colorSecondaryDark">#A09789</color>
-    <color name="colorSecondarySoft">#EDE9DF</color>
+    <color name="colorSecondary">#88CBC4</color>
+    <color name="colorSecondaryDark">#69BAB2</color>
+    <color name="colorSecondarySoft">#D1EAE8</color>
 
-    <color name="colorAccent">#A09789</color>
+    <color name="colorAccent">#D1EAE8</color>
 
     <color name="selected_background_color">#15a4fa</color>
     <color name="unselected_background_color">#1c324a</color>
